--- a/package.json
+++ b/package.json
@@ -43,11 +43,14 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "form-data": "^4.0.3",
     "immer": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "multer": "^2.0.1",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "openai": "^5.7.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
